<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    android:padding="16dp"
    tools:context="com.android.rexben.rexy.Quiz1">

    <TextView
        android:id="@+id/que"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/que"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="49dp"
        android:text="@string/kitkat"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:text="@string/gingerbread"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox2"
        android:layout_marginLeft="16dp"
        android:text="@string/cupcake"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox3"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/vanilla"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#DDA0DD"
        android:onClick="clickMe"
        android:text="@string/submit" />

</RelativeLayout>

