<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    android:padding="16dp"
    tools:context="com.android.rexben.rexy.TotalScore">

    <TextView
        android:id="@+id/tvt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_earned"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/texd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvt"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_of_correct_answers_no_of_questions"
        android:layout_below="@id/texd"
        android:layout_marginTop="20dp"
        android:id="@+id/textque"
        android:textSize="22sp"
        android:layout_centerVertical="true"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/textque2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_below="@id/textque"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#DDA0DD"
        android:onClick="reset"
        android:text="@string/reset"
        android:layout_below="@id/textque2"
        android:layout_marginTop="45dp"/>

</RelativeLayout>
